[gd_scene load_steps=3 format=3 uid="uid://cqicvk563xl76"]

[ext_resource type="PackedScene" uid="uid://dlyvi51d1hw1h" path="res://scenes/Control.tscn" id="1_o8o4s"]
[ext_resource type="Script" path="res://scenes/game.gd" id="2_wedjm"]

[node name="Control" instance=ExtResource("1_o8o4s")]

[node name="Game" type="Node2D" parent="." index="0"]
script = ExtResource("2_wedjm")

[node name="CanvasLayer" type="CanvasLayer" parent="Game" index="0"]

[node name="PauseBtn" type="Button" parent="Game/CanvasLayer" index="0"]
offset_right = 53.0
offset_bottom = 31.0
text = "Pause
"

[node name="VBoxContainer" type="VBoxContainer" parent="Game/CanvasLayer" index="1"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingBtn" type="Button" parent="Game/CanvasLayer/VBoxContainer" index="0"]
layout_mode = 2
text = "Settings
"

[node name="ResumeBtn" type="Button" parent="Game/CanvasLayer/VBoxContainer" index="1"]
layout_mode = 2
text = "Resume"

[connection signal="pressed" from="Game/CanvasLayer/PauseBtn" to="Game" method="_on_pause_btn_pressed"]
[connection signal="pressed" from="Game/CanvasLayer/VBoxContainer/ResumeBtn" to="Game" method="_on_resume_btn_pressed"]
